# Rag-Toolkit

./: .buildinfo  .gitignore  .ruffignore  404.html  CONTRIBUTING.md  GITHUB_PAGES.html  INSTALLATION_VERIFICATION.md  LICENSE  Makefile  NEXT_STEPS.md  README.html  README.md  SETUP_SUMMARY.md  architecture.html  benchmark_results.html  benchmarks.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  roadmap.html  search.html  searchindex.js  sitemap.xml
.doctrees/: GITHUB_PAGES.doctree  README.doctree  architecture.doctree  benchmark_results.doctree  benchmarks.doctree  changelog.doctree  contributing.doctree  index.doctree  installation.doctree  quickstart.doctree  roadmap.doctree
.doctrees/api/: index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/development/: changelog.doctree  contributing.doctree  roadmap.doctree
.doctrees/examples/: advanced_pipeline.doctree  basic_rag.doctree  custom_vectorstore.doctree  hybrid_search.doctree  index.doctree  production_setup.doctree
.doctrees/getting_started/: architecture.doctree  index.doctree  installation.doctree  quickstart.doctree
.doctrees/guides/: chunking.doctree  core_concepts.doctree  embeddings.doctree  index.doctree  llms.doctree  protocols.doctree  rag_pipeline.doctree  reranking.doctree  vector_stores.doctree
.doctrees/tools/: benchmark_results.doctree  benchmarks.doctree  migration.doctree
.doctrees/user_guide/: chunking.doctree  core_concepts.doctree  embeddings.doctree  index.doctree  llms.doctree  protocols.doctree  rag_pipeline.doctree  reranking.doctree  vector_stores.doctree
.github/workflows/: ci.yml  docs.yml  publish.yml
_modules/: base.html  index.html  search_strategies.html  service.html
_modules/src/: rag_toolkit.html
_modules/vector/: collection.html  config.html  connection.html  data.html  database.html  exceptions.html  explorer.html  service.html
_sources/: GITHUB_PAGES.md.txt  README.md.txt  architecture.md.txt  benchmark_results.rst.txt  benchmarks.md.txt  changelog.md.txt  contributing.md.txt  index.md.txt  index.rst.txt  quickstart.md.txt
_sources/api/: index.md.txt
_sources/autoapi/: index.rst.txt
_sources/development/: changelog.md.txt  roadmap.md.txt
_sources/examples/: advanced_pipeline.md.txt  basic_rag.md.txt  custom_vectorstore.md.txt  hybrid_search.md.txt  index.md.txt  production_setup.md.txt
_sources/getting_started/: architecture.md.txt  index.md.txt  installation.md.txt  quickstart.md.txt
_sources/guides/: chunking.md.txt  core_concepts.md.txt  embeddings.md.txt  index.md.txt  llms.md.txt  protocols.md.txt  rag_pipeline.md.txt  reranking.md.txt  vector_stores.md.txt
_sources/tools/: benchmark_results.md.txt  benchmarks.md.txt  migration.md.txt
_sources/user_guide/: chunking.md.txt  core_concepts.md.txt  embeddings.md.txt  llms.md.txt  protocols.md.txt  vector_stores.md.txt
_static/: benchmark_timestamp.txt  benchmarks_index.html  custom.css
api/: index.html
api/core/: protocols.html  types.html
api/migration/: migrator.html
api/rag/: pipeline.html
autoapi/: index.html
autoapi/base/: index.html
autoapi/search_strategies/: index.html
autoapi/service/: index.html
autoapi/vector/: index.html
development/: changelog.html  contributing.html  roadmap.html
development/changelog/: index.html
development/contributing/: index.html
development/roadmap/: index.html
docker/: docker.sh
docker/all/: docker-compose.yml
docker/chroma/: README.md  docker-compose.yml
docs/: conf.py  index.rst  roadmap.md
docs/development/: changelog.md
docs/examples/: advanced_pipeline.md  custom_vectorstore.md  hybrid_search.md  (+1 more)
examples/: advanced_pipeline.html  basic_rag.html  custom_vectorstore.html  hybrid_search.html  index.html  production_setup.html  quickstart.py
getting_started/: architecture.html  index.html  installation.html  quickstart.html
guides/: chunking.html  core_concepts.html  embeddings.html  index.html  llms.html  protocols.html  rag_pipeline.html  reranking.html  vector_stores.html
scripts/: fix_all_imports.py  fix_imports.py
search/: search_index.json
tests/: conftest.py
tools/: benchmark_results.html  benchmarks.html  index.html  migration.html
user_guide/: chunking.html  core_concepts.html  embeddings.html  index.html  llms.html  protocols.html  rag_pipeline.html  reranking.html  vector_stores.html
(+441 files in other folders)
