[project]
name = "rag-toolkit"
version = "0.1.0"
description = "Advanced RAG toolkit with multi-vectorstore support and production-ready components"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Gianmarco Mottola", email = "gianmarcomottola00@gmail.com" }
]
keywords = ["rag", "retrieval", "llm", "vector-search", "milvus", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pymilvus>=2.3.0,<3.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
# Vector databases
qdrant = ["qdrant-client>=1.7.0"]
chroma = ["chromadb>=0.4.0"]

# LLM providers
ollama = ["ollama>=0.1.0"]
openai = ["openai>=1.0.0,<2.0.0"]

# Document parsing
pdf = ["pymupdf>=1.23.0"]
docx = ["python-docx>=1.1.0"]
ocr = ["easyocr>=1.7.0"]

# Language detection
lang = ["langdetect>=1.0.9"]

# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

# Documentation
docs = [
    "sphinx>=7.0.0,<8.0.0",
    "furo>=2024.0.0",
    "sphinx-autoapi>=3.0.0,<4.0.0",
    "myst-parser>=2.0.0,<3.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
]

# All optional dependencies
all = [
    "rag-toolkit[qdrant,chroma,ollama,openai,pdf,docx,ocr,lang]",
]

[project.urls]
Homepage = "https://github.com/gmottola00/rag-toolkit"
Documentation = "https://gmottola00.github.io/rag-toolkit/"
Repository = "https://github.com/gmottola00/rag-toolkit"
Issues = "https://github.com/gmottola00/rag-toolkit/issues"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag_toolkit*"]
namespaces = false

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top of file
    "E731",  # do not assign a lambda expression
    "F401",  # imported but unused
    "F403",  # star imports
    "F405",  # undefined names from star imports
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports and star imports in __init__.py
"tests/**/*.py" = ["F401", "F403", "F811"]  # Test files can have redefined imports

# Black configuration
[tool.black]
line-length = 120
target-version = ["py311"]

# isort configuration
[tool.isort]
profile = "black"
line_length = 120

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pymilvus.*",
    "qdrant_client.*",
    "chromadb.*",
    "ollama.*",
    "langdetect.*",
    "fitz.*",
    "docx.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=rag_toolkit",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "Protocol",
]
